Fixed layout issues

--- a/_sass/refills/buttons.scss
+++ b/_sass/refills/buttons.scss
@@ -8,7 +8,7 @@
 	cursor: pointer;
 	padding: 15px 40px;
 	display: inline-block;
-	margin: 15px 15px;
+	margin: 15px 5px;
 	letter-spacing: 1px;
 	outline: none;
 	position: relative;
@@ -45,8 +45,8 @@
 }
 
 .btn-4:active {
-	border-color: #17954c;
-	color: #17954c;
+	border-color: $blue;
+	color: $blue;
 }
 
 
